--- a/force-app/main/default/lwc/communityExpandablePanel/communityExpandablePanel.html
+++ b/force-app/main/default/lwc/communityExpandablePanel/communityExpandablePanel.html
@@ -1,30 +1,5 @@
 <template>
-    <!-- <div class="navds-accordion slds-var-m-bottom_large">
-        <div class="navds-accordion__item">
-            <button
-                label={header}
-                aria-expanded={showpanel}
-                class="navds-accordion__header navds-heading navds-heading--small"
-            >
-                <div class="full-width">
-                    <span class="slds-float_left">{header}</span>
-                    <div>
-                        <span class={chevronClass}></span>
-                    </div>
-                </div>
-            </button>
-            <div role="region" class={dropdownClass}>
-                <div class="expand-animation ReactCollapse--collapse" aria-hidden={inverseShowpanel}>
-                    <div class="ReactCollapse--content">
-                        <div class="navds-accordion__content lenkepanel__heading" padding-top="large">
-                            <lightning-formatted-rich-text value={body}></lightning-formatted-rich-text>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div> -->
-    <div class={testNewClasses}>
+    <div class={accordianClass}>
         <button onclick={togglevisible} class="navds-accordion__header" type="button" aria-expanded={showpanel}>
             <span class="navds-accordion__header-content navds-heading navds-heading--small">{header}</span
             ><svg
@@ -63,7 +38,7 @@
                 ></path>
             </svg>
         </button>
-        <div aria-hidden={inverseShowpanel} style={testStyles} class={dropdownClass}>
+        <div aria-hidden={inverseShowpanel} class={dropdownClass}>
             <div class="expand-animation">
                 <div class="navds-accordion__content navds-body-long">
                     <lightning-formatted-rich-text value={body}></lightning-formatted-rich-text>
