UU and style changes

--- a/force-app/main/default/lwc/communityCheckbox/communityCheckbox.html
+++ b/force-app/main/default/lwc/communityCheckbox/communityCheckbox.html
@@ -12,9 +12,7 @@
             onfocusout={checkError}
         /><label class="navds-checkbox__label" for="checkbox">{labelText}</label>
         <template if:true={error}>
-            <div class="navds-error-message navds-error-message--medium navds-label">
-                Du må godta vilkårene for å sende melding
-            </div>
+            <div class="navds-error-message navds-error-message--medium navds-label">Du må godta vilkårene</div>
         </template>
     </div>
 </template>
