--- a/force-app/main/default/lwc/stoInboxInformation/stoInboxInformation.html
+++ b/force-app/main/default/lwc/stoInboxInformation/stoInboxInformation.html
@@ -1,5 +1,5 @@
 <template>
-    <div class="slds-var-p-horizontal_small">
+    <div if:true={infoText} class="slds-var-p-horizontal_medium spacing">
         <c-crm-community-alert-stripe class="alertbox" type="info" alerttext={infoText}></c-crm-community-alert-stripe>
     </div>
 </template>
