--- a/force-app/main/default/lwc/crmStoMessaging/crmStoMessaging.html
+++ b/force-app/main/default/lwc/crmStoMessaging/crmStoMessaging.html
@@ -1,4 +1,13 @@
 <template>
+    <lightning-card variant="Narrow" title="Hello" icon-name="standard:account">
+        <lightning-button
+            variant="base"
+            label="Switch slot content"
+            title="titleName"
+            onclick={handleClick}
+        ></lightning-button>
+        <p>{renderSlotContent}</p>
+    </lightning-card>
     <c-crm-messaging-message-component
         record-id={threadReference}
         single-thread={singleThread}
@@ -7,8 +16,20 @@
         show-close={showClose}
         english-text-template={englishTextTemplate}
         onenglisheventtwo={handleEnglishEventTwo}
-        check-medskriv={checkMedskriv}
     >
         <c-crm-sto-messaging-toolbar slot="toolbar" object-api-name={objectApiName}></c-crm-sto-messaging-toolbar>
+        <template if:true={showMedskrivBlocker}>
+            <div slot="messages">
+                <div class="slds-align_absolute-center slds-grid_vertical medskrivBlocker scroller">
+                    <p class="slds-text-body_regular slds-m-bottom_small">Brukeren har ikke samtykket til medskriv</p>
+                    <lightning-button
+                        variant="brand"
+                        label="Vis melding"
+                        onclick={handleMedskrivClick}
+                    ></lightning-button>
+                </div>
+                <!-- Messages End-->
+            </div>
+        </template>
     </c-crm-messaging-message-component>
 </template>
