Get medskriv field value

--- a/force-app/main/default/lwc/crmStoMessaging/crmStoMessaging.html
+++ b/force-app/main/default/lwc/crmStoMessaging/crmStoMessaging.html
@@ -6,10 +6,11 @@
             title="titleName"
             onclick={handleClick}
         ></lightning-button>
-        <p>{renderSlotContent}</p>
+        <p>{acceptedMedskriv}</p>
+        <p>{showMedskrivBlocker}</p>
     </lightning-card>
     <c-crm-messaging-message-component
-        record-id={threadReference}
+        record-id={threadId}
         single-thread={singleThread}
         card-title={cardTitle}
         text-template={textTemplate}
