--- a/force-app/main/default/lwc/communityConversationNote/communityConversationNote.html
+++ b/force-app/main/default/lwc/communityConversationNote/communityConversationNote.html
@@ -1,5 +1,5 @@
 <template>
-    <div class="decorator-wrapper wrapper">
+    <div class="nav-wrapper wrapper">
         <div class="header header--center page-header" style="text-align: center">
             <h1 class="navds-heading navds-heading--2xlarge header__tittel"><img src={navIcon} alt="" /> {title}</h1>
         </div>
