--- a/force-app/main/default/lwc/stoMessageInbox/stoMessageInbox.html
+++ b/force-app/main/default/lwc/stoMessageInbox/stoMessageInbox.html
@@ -9,7 +9,7 @@
                 title="Skriv ny melding"
             ></c-nav-Button>
         </div>
-        <div class="decorator-wrapper">
+        <div class="nav-wrapper">
             <div class="body">
                 <p class="navds-body-long navds-typo--spacing">
                     <strong>
