--- a/force-app/main/default/lwc/stoInboxInformation/stoInboxInformation.html
+++ b/force-app/main/default/lwc/stoInboxInformation/stoInboxInformation.html
@@ -1,5 +1,8 @@
 <template>
     <div if:true={infoText} class="slds-var-p-horizontal_medium spacing">
         <c-crm-community-alert-stripe class="alertbox" type="info" alerttext={infoText}></c-crm-community-alert-stripe>
+        <template if:true={isSTO}>
+            <p>Tilbakemeldingen din er anonym.</p>
+        </template>
     </div>
 </template>
