change icon alt text

--- a/force-app/main/default/lwc/stoMessageInboxItem/stoMessageInboxItem.html
+++ b/force-app/main/default/lwc/stoMessageInboxItem/stoMessageInboxItem.html
@@ -12,7 +12,7 @@
                 <img
                     class="iconcolor slds-is-relative slds-show"
                     src={dialog}
-                    alt={unreadmessage}
+                    alt="Samtalereferat"
                     id="b"
                     style="margin: auto; width: 24px; margin-right: 32px; margin-left: 32px"
                 />
