fix problem with journal/redact buttons

--- a/force-app/main/default/lwc/nksFlowButtonContainer/nksFlowButtonContainer.html
+++ b/force-app/main/default/lwc/nksFlowButtonContainer/nksFlowButtonContainer.html
@@ -40,6 +40,7 @@
                 button-label="Journalfør"
                 button-color=""
                 input-variables={inputVariables}
+                refresh-record={refreshRecord}
             ></c-nks-flow-button>
         </lightning-layout-item>
         <lightning-layout-item class="slds-size_12-of-12">
@@ -48,6 +49,7 @@
                 button-label="Sladd"
                 button-color=""
                 input-variables={inputVariables}
+                refresh-record={refreshRecord}
             ></c-nks-flow-button>
         </lightning-layout-item>
     </lightning-layout>
