replace dekoratoren with navstyling

--- a/force-app/main/default/lwc/stoRegisterThread/stoRegisterThread.html
+++ b/force-app/main/default/lwc/stoRegisterThread/stoRegisterThread.html
@@ -97,7 +97,7 @@
                                 <h2 class="navds-heading navds-heading--medium leftAlign topBigGap">
                                     Dine åpne samtaler om {selectedTheme}
                                 </h2>
-                                <div class="decorator-wrapper">
+                                <div class="nav-wrapper">
                                     <template for:each={openThreadList} for:item="thread" for:index="index">
                                         <c-sto-inbox-close-item
                                             thread={thread}
