--- a/force-app/main/default/lwc/stoRegisterThread/stoRegisterThread.html
+++ b/force-app/main/default/lwc/stoRegisterThread/stoRegisterThread.html
@@ -2,7 +2,7 @@
     <div style="margin-bottom: 4rem">
         <div>
             <div class="header">
-                <h1 class="navds-heading navds-heading--2xlarge">Skriv til oss</h1>
+                <h1 class="navds-heading navds-heading--2xlarge">{title}</h1>
             </div>
             <div
                 class="text-center"
