--- a/force-app/main/default/lwc/stoRegisterThread/stoRegisterThread.html
+++ b/force-app/main/default/lwc/stoRegisterThread/stoRegisterThread.html
@@ -88,7 +88,7 @@
                                     style="padding: calc(0.475rem - 1px) 2.5rem calc(0.525rem - 1px) 2.5rem"
                                     aria-disabled="false"
                                     label="Send"
-                                    onclick={submitrequest}
+                                    onclick={submitRequest}
                                 >
                                     Send
                                 </button>
