Add logic for header title

--- a/force-app/main/default/lwc/crmStoMessaging/crmStoMessaging.html
+++ b/force-app/main/default/lwc/crmStoMessaging/crmStoMessaging.html
@@ -2,7 +2,7 @@
     <c-crm-messaging-message-component
         record-id={threadId}
         single-thread={singleThread}
-        card-title={cardTitle}
+        card-title={actualCardTitle}
         text-template={textTemplate}
         show-close={showClose}
         english-text-template={englishTextTemplate}
