--- a/force-app/main/default/lwc/stoMessageInbox/stoMessageInbox.html
+++ b/force-app/main/default/lwc/stoMessageInbox/stoMessageInbox.html
@@ -4,10 +4,7 @@
             <h1 class="navds-heading navds-heading--2xlarge">{title}</h1>
         </div>
         <div class="header aroundGap">
-            <c-nav-Button
-                url="https://www.nav.no/person/kontakt-oss/skriv-til-oss"
-                title="Skriv ny melding"
-            ></c-nav-Button>
+            <c-nav-Button url="https://www.nav.no/kontaktoss" title="Kontakt oss"></c-nav-Button>
         </div>
         <div class="nav-wrapper">
             <div class="body">
