--- a/force-app/main/default/lwc/stoRegisterThread/stoRegisterThread.html
+++ b/force-app/main/default/lwc/stoRegisterThread/stoRegisterThread.html
@@ -20,9 +20,7 @@
                     </c-community-error-summary>
 
                     <div class="descholder slds-var-m-bottom_xx-large">
-                        <p class="navds-body-short navds-body-short--small blokk-xs description">
-                            {label.welcomelabel}
-                        </p>
+                        <p class="navds-body-short navds-body-short--small blokk-xs description">{introLabel}</p>
                     </div>
                     <div class="inputarea">
                         <template if:false={showspinner}>
