--- a/force-app/main/default/lwc/btoViewThread/btoViewThread.html
+++ b/force-app/main/default/lwc/btoViewThread/btoViewThread.html
@@ -1,6 +1,6 @@
 <template>
     <c-crm-messaging-community-thread-viewer
         record-id={threadId}
-        max-length="1000"
+        max-length={maxLength}
     ></c-crm-messaging-community-thread-viewer>
 </template>
