rename to melding from sto on utiity

--- a/force-app/main/default/lwc/nksGetStoUtility/nksGetStoUtility.html
+++ b/force-app/main/default/lwc/nksGetStoUtility/nksGetStoUtility.html
@@ -6,8 +6,8 @@
                     variant="brand"
                     disabled={showSpinner}
                     accesskey="h"
-                    label="Hent Ny STO"
-                    title="Hent Ny STO"
+                    label="Hent ny melding"
+                    title="Hent ny melding"
                     icon-name="utility:upload"
                     icon-position="left"
                     class="slds-var-p-horizontal_medium"
@@ -27,7 +27,7 @@
                         ></lightning-icon>
                     </lightning-layout-item>
                     <lightning-layout-item>
-                        <h2 id="nav1" class="slds-text-heading_small slds-truncate">Ikke ferdigstilte Skriv til oss</h2>
+                        <h2 id="nav1" class="slds-text-heading_small slds-truncate">Ikke ferdigstilte meldinger</h2>
                     </lightning-layout-item>
                     <lightning-layout-item class="slds-col">
                         <lightning-button-icon
@@ -468,7 +468,7 @@
                         </g>
                     </svg>
                     <div class="slds-text-longform">
-                        <h3 class="slds-text-heading_small">Du har ingen Skriv til oss som ikke er ferdigstilte.</h3>
+                        <h3 class="slds-text-heading_small">Du har ingen meldinger som ikke er ferdigstilte.</h3>
                     </div>
                 </div>
             </section>
