--- a/force-app/main/default/lwc/stoMedskrivSamtykke/stoMedskrivSamtykke.html
+++ b/force-app/main/default/lwc/stoMedskrivSamtykke/stoMedskrivSamtykke.html
@@ -9,7 +9,7 @@
                     variant="secondary"
                     size="small"
                     onclick={revokeMedskriv}
-                    text="FJERN MIN GODKJENNING"
+                    text="Fjern min godkjenning"
                 ></c-ds-button>
             </div>
         </div>
