--- a/force-app/main/default/lwc/communityBreadCrumb/communityBreadCrumb.html
+++ b/force-app/main/default/lwc/communityBreadCrumb/communityBreadCrumb.html
@@ -3,22 +3,22 @@
         <div class="decorator-utils-container">
             <div class="decorator-utils-content">
                 <nav class="brodsmulesti" aria-label="Brødsmulesti" itemprop="breadcrumb">
-                    <a href="https://www.nav.no" class="lenke brodsmulesti__home typo-normal"
+                    <a href="https://www.nav.no" target="_self" class="lenke brodsmulesti__home typo-normal"
                         ><img src={homelogo} alt="" class="homeicon" /><span>nav.no</span></a
                     >
                     <span class="nav-frontend-chevron chevronboks chevron--hoyre"></span>
                     <template if:true={firstLevel}>
-                        <a href={firstLevelLink} class="lenke typo-normal"><span>{firstLevel}</span></a>
+                        <a href={firstLevelLink} target="_self" class="lenke typo-normal"><span>{firstLevel}</span></a>
                         <span class="nav-frontend-chevron chevronboks chevron--hoyre"></span>
                     </template>
                     <template if:true={secondLevel}>
-                        <a href={secondLevelLink} class="lenke brodsmulesti__transfor typo-normal"
+                        <a href={secondLevelLink} target="_self" class="lenke brodsmulesti__transfor typo-normal"
                             ><span>{secondLevel}</span></a
                         >
                         <span class="nav-frontend-chevron chevronboks chevron--hoyre"></span>
                     </template>
                     <template if:true={thirdLevel}>
-                        <a href={thirdLevelLink} class="lenke brodsmulesti__transform typo-normal"
+                        <a href={thirdLevelLink} target="_self" class="lenke brodsmulesti__transform typo-normal"
                             ><span>{thirdLevel}</span></a
                         >
                         <span class="nav-frontend-chevron chevronboks chevron--hoyre"></span>
