hide survey button from inbox

--- a/force-app/main/default/lwc/stoInboxInformation/stoInboxInformation.html
+++ b/force-app/main/default/lwc/stoInboxInformation/stoInboxInformation.html
@@ -8,7 +8,7 @@
             ></c-crm-community-alert-stripe>
         </div>
     </template>
-    <template if:true={isClosedSTO}>
+    <template if:true={showSurveyButton}>
         <div class="slds-var-p-horizontal_medium slds-var-p-bottom_xx-large cssPadding">
             <h2 class="navds-heading navds-heading--medium navds-typo--spacing">
                 Vi ønsker å lære av din opplevelse. Har du tid til å svare på 2 spørsmål?
