fix infobox for bto

--- a/force-app/main/default/lwc/stoInboxInformation/stoInboxInformation.html
+++ b/force-app/main/default/lwc/stoInboxInformation/stoInboxInformation.html
@@ -1,5 +1,5 @@
 <template>
-    <template if:false={isClosedSTO}>
+    <template if:false={isClosedSTOorBTO}>
         <div if:true={infoText} class="slds-var-p-horizontal_medium spacing">
             <c-crm-community-alert-stripe
                 class="alertbox"
