--- a/force-app/main/default/lwc/navButton/navButton.html
+++ b/force-app/main/default/lwc/navButton/navButton.html
@@ -1,3 +1,3 @@
 <template>
-    <a class="navds-button navds-button--primary navds-button--medium" href={url}> {title} </a>
+    <a class="navds-button navds-button--primary navds-button--medium" target="_self" href={url}> {title} </a>
 </template>
