--- a/force-app/main/default/lwc/crmStoMessaging/crmStoMessaging.html
+++ b/force-app/main/default/lwc/crmStoMessaging/crmStoMessaging.html
@@ -8,6 +8,7 @@
         english-text-template={englishTextTemplate}
         onenglisheventtwo={handleEnglishEventTwo}
         class={computeClasses}
+        show-quick
     >
         <c-crm-sto-messaging-toolbar slot="toolbar" object-api-name={objectApiName}></c-crm-sto-messaging-toolbar>
         <template if:true={showMedskrivBlocker}>
