focus component to read up content after clicking medskriv

--- a/force-app/main/default/lwc/crmStoMessaging/crmStoMessaging.html
+++ b/force-app/main/default/lwc/crmStoMessaging/crmStoMessaging.html
@@ -1,5 +1,6 @@
 <template>
     <c-crm-messaging-message-component
+        tabindex="0"
         record-id={threadId}
         single-thread={singleThread}
         card-title={actualCardTitle}
