--- a/force-app/main/default/lwc/nksGetStoUtility/nksGetStoUtility.html
+++ b/force-app/main/default/lwc/nksGetStoUtility/nksGetStoUtility.html
@@ -1,22 +1,13 @@
 <template>
     <div>
-        <p lwc:if={skillList}>Du er kul, fordi du har skills. Dette er dine skills:</p>
-        <p lwc:else>Vent du har ikke skills? Satan kor ikke kul du e.</p>
-        <ul>
-            <template lwc:if={skillList} for:each={skillList} for:item="skill">
-                <li key={skill.SkillId}>{skill.Skill.DeveloperName}</li>
-            </template>
-        </ul>
         <lightning-select
             name="tickets"
-            label="Hvilken kø vil du plukke?"
+            label="Hvilken kø vil du plukke fra?"
             value={value}
             options={options}
             onchange={handleChange}
             required
         ></lightning-select>
-
-        <p>Picked skills: {value}</p>
         <lightning-layout class="slds-grid_align-center">
             <lightning-layout-item class="slds-var-p-vertical_medium">
                 <lightning-button
